<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_BodyHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BodyHeight" />

        <EditText
            android:id="@+id/et_BodyHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/DefaultBodyHeight"
            android:inputType="number"
            android:text="@string/DefaultBodyHeight" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_Weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_Weight" />

        <EditText
            android:id="@+id/et_BodyWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/DefaultBodyWeight"
            android:inputType="number"
            android:text="@string/DefaultBodyWeight" />
    </LinearLayout>

    <Button
        android:id="@+id/Calculation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="Cal"
        android:text="@string/Calculation"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/tv_BMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_BMI" />

    <Button
        android:id="@+id/tv_Author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="NextPage"
        android:text="@string/Author"
        tools:ignore="OnClick" />



</LinearLayout>